[tool.poetry]
version = "0.1.0"
authors = ["Blaise Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-storage = "^1.40.0"
google-cloud-logging = "^3.11.3"

[tool.poetry.group.dev.dependencies]
parameterized = "^0.9.0"
setuptools = "^80.9.0"
black = "^25.1.0"
isort = "^6.0.1"