[tool.poetry]
version = "0.1.0"
authors = ["Blaise Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
google-cloud-storage = "^3.3.1"
google-cloud-logging = "^3.12.1"

[tool.poetry.group.dev.dependencies]
parameterized = "^0.9.0"
setuptools = "^80.9.0"
black = "^25.1.0"
isort = "^6.0.1"
mock-alchemy = "^0.2.6"

[tool.mypy]
python_version = "3.13"
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true